@@ -1,3 +1,8 @@
+2001-01-25  Arturo Espinosa  <arturo@ximian.com>
+
+	* new_network-conf.in, network.pl.in, parse.pl.in: completly new
+	  network code and parsing routines.
+
 2001-01-22  Arturo Espinosa  <arturo@ximian.com>
 
 	* add_amp.sh: dumb program that fixes missing & when calling
